--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
+    <script src="./script.js" defer></script>
 </head>
 
-<body id="teste">
+<body>
     <main class="app">
         <header class="app__header">
             <figure class="app__logo-figure">
@@ -37,13 +38,13 @@
             <div class="app__card">
                 <ul class="app__card-list">
                     <li class="app__card-list-item">
-                        <button onclick="foco()" data-contexto="foco" id="btn-foco" class="app__card-button app__card-button--foco active">Foco</button>
+                        <button data-contexto="foco" class="app__card-button app__card-button--foco active">Foco</button>
                     </li>
                     <li class="app__card-list-item">
-                        <button onclick="curto()" data-contexto="short" id="'btn-curto" class="app__card-button app__card-button--curto">Descanso curto</button>
+                        <button data-contexto="short" class="app__card-button app__card-button--curto">Descanso curto</button>
                     </li>
                     <li class="app__card-list-item">
-                        <button onclick="longo()" data-contexto="long" id="btn-longo" class="app__card-button app__card-button--longo">Descanso longo</button>
+                        <button data-contexto="long" class="app__card-button app__card-button--longo">Descanso longo</button>
                     </li>
                 </ul>
                 <div id="timer" class="app__card-timer"></div>
@@ -75,7 +76,7 @@
             </p>
         </footer>
     </main>
-    <script src="./script.js"></script>
+
 </body>
 
 </html>
